--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,3 +22,14 @@ jobs:
           run: |
             chmod +x scripts/buildprod.sh
             ./scripts/buildprod.sh
+
+        - id: 'auth'
+          uses: 'google-github-actions/auth@v1'
+          with:
+            credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+        - name: 'Set up Cloud SDK'
+          uses: 'google-github-actions/setup-gcloud@v1'
+
+        - name: Build and Push Docker Image
+          run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-458513/notely-ar-repo/notely:latest .
