--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
         - name: Check out code
           uses: actions/checkout@v4
@@ -17,6 +20,11 @@ jobs:
           uses: actions/setup-go@v5
           with:
             go-version: "1.23.0"
+
+        - name: Install goose
+          run: |
+            go install github.com/pressly/goose/v3/cmd/goose@latest
+            echo "$HOME/go/bin" >> $GITHUB_PATH
         
         - name: Build the app
           run: |
@@ -33,6 +41,9 @@ jobs:
 
         - name: Build and Push Docker Image
           run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-458513/notely-ar-repo/notely:latest .
+
+        - name: Run migrations
+          run: ./scripts/migrateup.sh
 
         - name: Deploy to Cloud Run
           run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-458513/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-458513 --max-instances=4
